Commented db initialization

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.datasource.url: ${JDBC_DATABASE_URL:}
 spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.maximum-pool-size=10
-spring.datasource.initialize=true
-spring.datasource.initialization-mode=always
+#spring.datasource.initialize=true
+#spring.datasource.initialization-mode=always
 
 spring.thymeleaf.mode=HTML
 
