Added update ddl

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.datasource.url: ${JDBC_DATABASE_URL:}
 spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.maximum-pool-size=10
+spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.initialize=true
 #spring.datasource.initialization-mode=always
 
